# llm-summary-generator

./: .env.example  Dockerfile  README.md  pyproject.toml
sample_data/: CELTIC 2025_Toplantı Linkleri[1].docx  hnsw.txt
src/: main.py
src/app/: api.py
src/config/: settings.py
src/models/: schemas.py
src/processors/: document.py
src/services/: __init__.py  model_manager.py  summary.py
tests/: conftest.py  test_api.py  test_document_processor.py  test_model_manager.py  test_summary_generator.py
