[tool.poetry]
name = "document-analyzer"
version = "0.1.0"
description = "Document analysis system using multiple LLM providers"
authors = ["Mandana Fasounaki <mandana.fasounaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
pydantic = "^2.5.0"
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
