[tool.poetry]
name = "document-analyzer"
version = "0.1.0"
description = "Document analysis system using multiple LLM providers"
authors = ["Mandana Fasounaki <mandana.fasounaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.18"
pydantic = "^2.5.0"
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
pydantic-settings = "^2.7.1"
python-docx = "^1.1.2"
langchain-openai = "^0.3.5"
langchain-anthropic = "^0.3.7"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.17"
huggingface-hub = "^0.28.1"
langchain-huggingface = "^0.1.2"
transformers = "^4.48.3"
reportlab = "^4.3.1"
pypdf = "^5.3.0"
fastapi = "^0.115.8"
pypdf2 = "^3.0.1"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"

